--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,32 +3,37 @@
 <div class="field">
     <div class="control">
         <%= f.input :title,
-            label: "Title: ",
+            label: "titulo:",
             input_html: { class: "string" },
             wrapper: false, label_html: {class: "label" },
-            placeholder: "Enter a title",
+            placeholder: "diego nos salvo y a la patria construyo",
             autofocus: true,
             :error => false%>
 
     </div>
     <% unless @post.errors[:title].empty?%>
-        <p class="help is-danger">Please enter a title</p>
+        <p class="help is-danger">ponele titulo gracias</p>
     <% end %>
 </div>
-
+<br>
 <div class="field">
     <div class="control">
         <%= f.input :body,
-            label: "Share your secrets: ",
+            label: "CUENTECUENTO: ",
             input_html: { class: "textarea" },
             wrapper: false, label_html: {class: "label" },
-            placeholder: "Enter a text",
+            placeholder: "Si tuvieses que elegir 3 personas para comer un asado, ¿quienes serian?",
             :error => false%>
     </div>
     <% unless @post.errors[:body].empty?%>
-        <p class="help is-danger">Please enter a story</p>
+        <p class="help is-danger">CONTATE ALGO</p>
     <% end %>
 </div>
+<br>
 
-<%= f.submit "Post your story", class: "button is primary"%>
+<%= f.submit "POSTEAR CUENTO", class: "button "%>
+
+<br><br>
+
+<%= link_to 'VOLVER A VER LOS CUENTOS', posts_path %>
 <% end %>
